--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pillow>=6.1
-pytest>=5
-python-telegram-bot[socks]
-python-telegram-bot>=12
-psycopg2-binary>=2.8.3
-sqlalchemy>=1.3
-sqlalchemy-utils>=0.34.2
+pillow==8.0.1
+pytest==6.1.1
+python-telegram-bot==13.0
+sqlalchemy==1.3.20
+sqlalchemy-utils==0.36.8
