--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+arabic-reshaper==2.1.3
 pillow==8.1.1
 psycopg2-binary==2.8.6
 pytest==6.1.1
+python-bidi==0.4.2
 python-telegram-bot==13.0
 sqlalchemy==1.3.20
 sqlalchemy-utils==0.36.8
